force-app/main/default/objects/numm__l_cfonb__c/numm__l_cfonb__c.object-meta.xml
<CustomObject>
    <label>Ligne CFONB</label>
    <nameField>
        <displayFormat>L_CFONB{00000}</displayFormat>
        <label>Nom de détail cfomb</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lignes CFONB</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>