force-app/main/default/objects/numm__l_cfonb__c/fields/numm__code_banque__c.field-meta.xml
<CustomField>
    <fullName>numm__code_banque__c</fullName>
    <label>Code banque</label>
    <length>5</length>
    <type>Text</type>
</CustomField>