force-app/main/default/objects/numm__l_cfonb__c/fields/numm__code_devises__c.field-meta.xml
<CustomField>
    <fullName>numm__code_devises__c</fullName>
    <label>Code devises</label>
    <length>3</length>
    <type>Text</type>
</CustomField>