force-app/main/default/objects/numm__l_cfonb__c/fields/numm__code_exoneration__c.field-meta.xml
<CustomField>
    <fullName>numm__code_exoneration__c</fullName>
    <label>Code exonération</label>
    <length>1</length>
    <type>Text</type>
</CustomField>