force-app/main/default/objects/numm__l_cfonb__c/fields/numm__code_guichet__c.field-meta.xml
<CustomField>
    <fullName>numm__code_guichet__c</fullName>
    <label>Code guichet</label>
    <length>5</length>
    <type>Text</type>
</CustomField>