force-app/main/default/objects/numm__l_cfonb__c/fields/numm__code_op_int_banc__c.field-meta.xml
<CustomField>
    <fullName>numm__code_op_int_banc__c</fullName>
    <label>Code opération interbancaire</label>
    <length>2</length>
    <type>Text</type>
</CustomField>