force-app/main/default/objects/numm__l_cfonb__c/fields/numm__code_op_SG__c.field-meta.xml
<CustomField>
    <fullName>numm__code_op_SG__c</fullName>
    <label>Code opération SG</label>
    <length>4</length>
    <type>Text</type>
</CustomField>