force-app/main/default/objects/numm__l_cfonb__c/fields/numm__code_rejet__c.field-meta.xml
<CustomField>
    <fullName>numm__code_rejet__c</fullName>
    <label>Code motif de rejet</label>
    <length>2</length>
    <type>Text</type>
</CustomField>