force-app/main/default/objects/numm__l_cfonb__c/fields/numm__Date_ecriture_4_5__c.field-meta.xml
<CustomField>
    <fullName>numm__Date_ecriture_4_5__c</fullName>
    <label>Date de l&#39;écriture</label>
    <type>Date</type>
</CustomField>