force-app/main/default/objects/numm__l_cfonb__c/fields/numm__Date_new_solde_07__c.field-meta.xml
<CustomField>
    <fullName>numm__Date_new_solde_07__c</fullName>
    <label>Date de nouveau solde</label>
    <type>Date</type>
</CustomField>