force-app/main/default/objects/numm__l_cfonb__c/fields/numm__Date_old_solde_01__c.field-meta.xml
<CustomField>
    <fullName>numm__Date_old_solde_01__c</fullName>
    <label>Date de l&#39;ancien solde</label>
    <type>Date</type>
</CustomField>