force-app/main/default/objects/numm__l_cfonb__c/fields/numm__date_valeur__c.field-meta.xml
<CustomField>
    <fullName>numm__date_valeur__c</fullName>
    <label>Date de valeur</label>
    <type>Date</type>
</CustomField>