force-app/main/default/objects/numm__l_cfonb__c/fields/numm__decimales__c.field-meta.xml
<CustomField>
    <fullName>numm__decimales__c</fullName>
    <label>Nombre de décimales</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>