force-app/main/default/objects/numm__l_cfonb__c/fields/numm__Ecriture_detail__c.field-meta.xml
<CustomField>
    <fullName>numm__Ecriture_detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ecriture Détail</label>
    <referenceTo>numm__l_cfonb__c</referenceTo>
    <relationshipLabel>Lignes CFONB (Ecriture Détail)</relationshipLabel>
    <relationshipName>Lignes_CFONB1</relationshipName>
    <type>Lookup</type>
</CustomField>