force-app/main/default/objects/numm__l_cfonb__c/fields/numm__header__c.field-meta.xml
<CustomField>
    <fullName>numm__header__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Entête : Ancien Solde</label>
    <referenceTo>numm__l_cfonb__c</referenceTo>
    <relationshipLabel>Lignes CFONB</relationshipLabel>
    <relationshipName>Lignes_CFONB</relationshipName>
    <type>Lookup</type>
</CustomField>