force-app/main/default/objects/numm__l_cfonb__c/fields/numm__Import_CFONB__c.field-meta.xml
<CustomField>
    <fullName>numm__Import_CFONB__c</fullName>
    <label>Import CFONB</label>
    <referenceTo>numm__Import_CFONB__c</referenceTo>
    <relationshipName>d_tails_cfomb</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>