force-app/main/default/objects/numm__l_cfonb__c/fields/numm__index__c.field-meta.xml
<CustomField>
    <fullName>numm__index__c</fullName>
    <label>index</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>