force-app/main/default/objects/numm__l_cfonb__c/fields/numm__indice_SIT__c.field-meta.xml
<CustomField>
    <fullName>numm__indice_SIT__c</fullName>
    <label>Indice SIT</label>
    <length>1</length>
    <type>Text</type>
</CustomField>