force-app/main/default/objects/numm__l_cfonb__c/fields/numm__Lib_comp__c.field-meta.xml
<CustomField>
    <fullName>numm__Lib_comp__c</fullName>
    <label>Libellé complémentaire</label>
    <length>40</length>
    <type>Text</type>
</CustomField>