force-app/main/default/objects/numm__l_cfonb__c/fields/numm__Lib_op__c.field-meta.xml
<CustomField>
    <fullName>numm__Lib_op__c</fullName>
    <label>Libellé de l&#39;opération</label>
    <length>30</length>
    <type>Text</type>
</CustomField>