force-app/main/default/objects/numm__l_cfonb__c/fields/numm__Montant__c.field-meta.xml
<CustomField>
    <fullName>numm__Montant__c</fullName>
    <label>Montant</label>
    <precision>14</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>