force-app/main/default/objects/numm__l_cfonb__c/fields/numm__n_compte__c.field-meta.xml
<CustomField>
    <fullName>numm__n_compte__c</fullName>
    <label>N° de compte</label>
    <precision>11</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>