force-app/main/default/objects/numm__l_cfonb__c/fields/numm__n_ecriture__c.field-meta.xml
<CustomField>
    <fullName>numm__n_ecriture__c</fullName>
    <label>N° de l&#39;écriture</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>