force-app/main/default/objects/numm__l_cfonb__c/fields/numm__Nouveau_Solde__c.field-meta.xml
<CustomField>
    <fullName>numm__Nouveau_Solde__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nouveau Solde</label>
    <referenceTo>numm__l_cfonb__c</referenceTo>
    <relationshipLabel>Lignes CFONB (Nouveau Solde)</relationshipLabel>
    <relationshipName>Lignes_CFONB2</relationshipName>
    <type>Lookup</type>
</CustomField>