force-app/main/default/objects/numm__l_cfonb__c/fields/numm__ref_op__c.field-meta.xml
<CustomField>
    <fullName>numm__ref_op__c</fullName>
    <label>Référence de l&#39;opération</label>
    <length>16</length>
    <type>Text</type>
</CustomField>