force-app/main/default/objects/numm__l_cfonb__c/recordTypes/numm__X01.recordType-meta.xml
<RecordType>
    <fullName>numm__X01</fullName>
    <active>true</active>
    <label>Entête : Ancien Solde</label>
</RecordType>