force-app/main/default/objects/numm__l_cfonb__c/recordTypes/numm__X04.recordType-meta.xml
<RecordType>
    <fullName>numm__X04</fullName>
    <active>true</active>
    <label>Ecriture Détail</label>
</RecordType>