force-app/main/default/objects/numm__l_cfonb__c/recordTypes/numm__X05.recordType-meta.xml
<RecordType>
    <fullName>numm__X05</fullName>
    <active>true</active>
    <label>Libellé complémentaire</label>
</RecordType>