force-app/main/default/objects/numm__l_cfonb__c/recordTypes/numm__X07.recordType-meta.xml
<RecordType>
    <fullName>numm__X07</fullName>
    <active>true</active>
    <label>Nouveau Solde</label>
</RecordType>